# rocket-demo-app

./: Cargo.toml  diesel.toml
migrations/2021-10-23-172701_create_tasks/: up.sql
migrations/2021-10-24-115100_create_users/: down.sql  up.sql
src/: main.rs  router.rs  schema.rs
src/controllers/: mod.rs  session_controller.rs  task_controller.rs
src/models/: connection.rs  mod.rs  task.rs  token.rs  user.rs
