[package]
name = "rocket-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
bcrypt = "0.10"
diesel-citext = "0.3"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
